--- a/common.css
+++ b/common.css
@@ -362,12 +362,20 @@ p.banner-layout {
     line-height: 3rem;
 }
 .banner-text-h2 {
+    font-size: 1.5rem;
+    line-height: 2rem;
+}
+.banner-text-h3 {
     font-size: 1.25rem;
     line-height: 1.75rem;
 }
 .banner-text-h4 {
     font-size: 1rem;
     line-height: 2.4rem;
+}
+.banner-text-h5 {
+    font-size: 1rem;
+    line-height: 1.5rem;
 }
 .banner-text-h6 {
     font-size: 1rem;
@@ -379,12 +387,20 @@ p.banner-layout {
         line-height: 3.6rem;
     }
     .banner-text-h2 {
+        font-size: 1.8rem;
+        line-height: 2.4rem;
+    }
+    .banner-text-h3 {
         font-size: 1.5rem;
         line-height: 2.1rem;
     }
     .banner-text-h4 {
         font-size: 1.1rem;
         line-height: 1.8rem;
+    }
+    .banner-text-h5 {
+        font-size: 1.2rem;
+        line-height: 2.2rem;
     }
     .banner-text-h6 {
         font-size: 1.2rem;
@@ -397,12 +413,20 @@ p.banner-layout {
         line-height: 4.8rem;
     }
     .banner-text-h2 {
+        font-size: 2.4rem;
+        line-height: 3.2rem;
+    }
+    .banner-text-h3 {
         font-size: 2.0rem;
         line-height: 2.8rem;
     }
     .banner-text-h4 {
         font-size: 1.45rem;
         line-height: 2.4rem;
+    }
+    .banner-text-h5 {
+        font-size: 1.3rem;
+        line-height: 2.5rem;
     }
     .banner-text-h6 {
         font-size: 1.3rem;
@@ -415,12 +439,20 @@ p.banner-layout {
         line-height: 5.4rem;
     }
     .banner-text-h2 {
+        font-size: 2.7rem;
+        line-height: 3.6rem;
+    }
+    .banner-text-h3 {
         font-size: 2.25rem;
         line-height: 3.15rem;
     }
     .banner-text-h4 {
         font-size: 1.6rem;
         line-height: 2.7rem;
+    }
+    .banner-text-h5 {
+        font-size: 1.35rem;
+        line-height: 2.8rem;
     }
     .banner-text-h6 {
         font-size: 1.35rem;
@@ -433,6 +465,10 @@ p.banner-layout {
         line-height: 6rem;
     }
     .banner-text-h2 {
+        font-size: 3rem;
+        line-height: 4rem;
+    }
+    .banner-text-h3 {
         font-size: 2.5rem;
         line-height: 3.5rem;
     }
@@ -440,9 +476,13 @@ p.banner-layout {
         font-size: 1.8rem;
         line-height: 3.0rem;
     }
-    .banner-text-h6 {
+    .banner-text-h5 {
         font-size: 1.5rem;
         line-height: 3.0rem;
+    }
+    .banner-text-h6 {
+        font-size: 1.2rem;
+        line-height: 1.6rem;
     }
 }
 @media (min-width: 1400px) {
