--- a/common.css
+++ b/common.css
@@ -230,7 +230,7 @@
     .radius-sm-1 {
         border-radius: 1rem;
     }
-    .radiuss-sm-1x5 {
+    .radius-sm-1x5 {
         border-radius: 1.5rem;
     }
     .radius-sm-2 {
@@ -687,6 +687,78 @@ p.banner-layout {
 .mv-right-9 {
     margin-right: -9rem;
 }
+.scale-0x1 {
+    transform: scale(0.1);
+}
+.scale-0x2 {
+    transform: scale(0.2);
+}
+.scale-0x25 {
+    transform: scale(0.25);
+}
+.scale-0x3 {
+    transform: scale(0.3);
+}
+.scale-0x4 {
+    transform: scale(0.4);
+}
+.scale-0x5 {
+    transform: scale(0.5);
+}
+.scale-0x6 {
+    transform: scale(0.6);
+}
+.scale-0x7 {
+    transform: scale(0.7);
+}
+.scale-0x75 {
+    transform: scale(0.75);
+}
+.scale-0x8 {
+    transform: scale(0.8);
+}
+.scale-0x9 {
+    transform: scale(0.9);
+}
+.scale-1x0 {
+    transform: scale(1.2);
+}
+.scale-1x1 {
+    transform: scale(1.1);
+}
+.scale-1x2 {
+    transform: scale(1.2);
+}
+.scale-1x25 {
+    transform: scale(1.25);
+}
+.scale-1x3 {
+    transform: scale(1.3);
+}
+.scale-1x4 {
+    transform: scale(1.4);
+}
+.scale-1x5 {
+    transform: scale(1.5);
+}
+.scale-1x75 {
+    transform: scale(1.75);
+}
+.scale-2x0 {
+    transform: scale(2.0);
+}
+.scale-2x5 {
+    transform: scale(2.5);
+}
+.scale-3x0 {
+    transform: scale(3.0);
+}
+.scale-4x0 {
+    transform: scale(4.0);
+}
+.scale-5x0 {
+    transform: scale(5.0);
+}
 @media (min-width: 576px) {
     .mv-up-sm-0 {
         transform: translateY(-0%);
@@ -867,6 +939,78 @@ p.banner-layout {
     }
     .mv-right-sm-9 {
         margin-right: -9rem;
+    }
+    .scale-sm-0x1 {
+        transform: scale(0.1);
+    }
+    .scale-sm-0x2 {
+        transform: scale(0.2);
+    }
+    .scale-sm-0x25 {
+        transform: scale(0.25);
+    }
+    .scale-sm-0x3 {
+        transform: scale(0.3);
+    }
+    .scale-sm-0x4 {
+        transform: scale(0.4);
+    }
+    .scale-sm-0x5 {
+        transform: scale(0.5);
+    }
+    .scale-sm-0x6 {
+        transform: scale(0.6);
+    }
+    .scale-sm-0x7 {
+        transform: scale(0.7);
+    }
+    .scale-sm-0x75 {
+        transform: scale(0.75);
+    }
+    .scale-sm-0x8 {
+        transform: scale(0.8);
+    }
+    .scale-sm-0x9 {
+        transform: scale(0.9);
+    }
+    .scale-sm-1x0 {
+        transform: scale(1.2);
+    }
+    .scale-sm-1x1 {
+        transform: scale(1.1);
+    }
+    .scale-sm-1x2 {
+        transform: scale(1.2);
+    }
+    .scale-sm-1x25 {
+        transform: scale(1.25);
+    }
+    .scale-sm-1x3 {
+        transform: scale(1.3);
+    }
+    .scale-sm-1x4 {
+        transform: scale(1.4);
+    }
+    .scale-sm-1x5 {
+        transform: scale(1.5);
+    }
+    .scale-sm-1x75 {
+        transform: scale(1.75);
+    }
+    .scale-sm-2x0 {
+        transform: scale(2.0);
+    }
+    .scale-sm-2x5 {
+        transform: scale(2.5);
+    }
+    .scale-sm-3x0 {
+        transform: scale(3.0);
+    }
+    .scale-sm-4x0 {
+        transform: scale(4.0);
+    }
+    .scale-sm-5x0 {
+        transform: scale(5.0);
     }
 }
 @media (min-width: 768px) {
@@ -1050,6 +1194,79 @@ p.banner-layout {
     .mv-right-md-9 {
         margin-right: -9rem;
     }
+    .scale-md-0x1 {
+        transform: scale(0.1);
+    }
+    .scale-md-0x2 {
+        transform: scale(0.2);
+    }
+    .scale-md-0x25 {
+        transform: scale(0.25);
+    }
+    .scale-md-0x3 {
+        transform: scale(0.3);
+    }
+    .scale-md-0x4 {
+        transform: scale(0.4);
+    }
+    .scale-md-0x5 {
+        transform: scale(0.5);
+    }
+    .scale-md-0x6 {
+        transform: scale(0.6);
+    }
+    .scale-md-0x7 {
+        transform: scale(0.7);
+    }
+    .scale-md-0x75 {
+        transform: scale(0.75);
+    }
+    .scale-md-0x8 {
+        transform: scale(0.8);
+    }
+    .scale-md-0x9 {
+        transform: scale(0.9);
+    }
+    .scale-md-1x0 {
+        transform: scale(1.2);
+    }
+    .scale-md-1x1 {
+        transform: scale(1.1);
+    }
+    .scale-md-1x2 {
+        transform: scale(1.2);
+    }
+    .scale-md-1x25 {
+        transform: scale(1.25);
+    }
+    .scale-md-1x3 {
+        transform: scale(1.3);
+    }
+    .scale-md-1x4 {
+        transform: scale(1.4);
+    }
+    .scale-md-1x5 {
+        transform: scale(1.5);
+    }
+    .scale-md-1x75 {
+        transform: scale(1.75);
+    }
+    .scale-md-2x0 {
+        transform: scale(2.0);
+    }
+    .scale-md-2x5 {
+        transform: scale(2.5);
+    }
+    .scale-md-3x0 {
+        transform: scale(3.0);
+    }
+    .scale-md-4x0 {
+        transform: scale(4.0);
+    }
+    .scale-md-5x0 {
+        transform: scale(5.0);
+    }
+
 }
 @media (min-width: 992px) {
     .mv-up-lg-0 {
@@ -1231,6 +1448,78 @@ p.banner-layout {
     }
     .mv-right-lg-9 {
         margin-right: -9rem;
+    }
+    .scale-lg-0x1 {
+        transform: scale(0.1);
+    }
+    .scale-lg-0x2 {
+        transform: scale(0.2);
+    }
+    .scale-lg-0x25 {
+        transform: scale(0.25);
+    }
+    .scale-lg-0x3 {
+        transform: scale(0.3);
+    }
+    .scale-lg-0x4 {
+        transform: scale(0.4);
+    }
+    .scale-lg-0x5 {
+        transform: scale(0.5);
+    }
+    .scale-lg-0x6 {
+        transform: scale(0.6);
+    }
+    .scale-lg-0x7 {
+        transform: scale(0.7);
+    }
+    .scale-lg-0x75 {
+        transform: scale(0.75);
+    }
+    .scale-lg-0x8 {
+        transform: scale(0.8);
+    }
+    .scale-lg-0x9 {
+        transform: scale(0.9);
+    }
+    .scale-lg-1x0 {
+        transform: scale(1.2);
+    }
+    .scale-lg-1x1 {
+        transform: scale(1.1);
+    }
+    .scale-lg-1x2 {
+        transform: scale(1.2);
+    }
+    .scale-lg-1x25 {
+        transform: scale(1.25);
+    }
+    .scale-lg-1x3 {
+        transform: scale(1.3);
+    }
+    .scale-lg-1x4 {
+        transform: scale(1.4);
+    }
+    .scale-lg-1x5 {
+        transform: scale(1.5);
+    }
+    .scale-lg-1x75 {
+        transform: scale(1.75);
+    }
+    .scale-lg-2x0 {
+        transform: scale(2.0);
+    }
+    .scale-lg-2x5 {
+        transform: scale(2.5);
+    }
+    .scale-lg-3x0 {
+        transform: scale(3.0);
+    }
+    .scale-lg-4x0 {
+        transform: scale(4.0);
+    }
+    .scale-lg-5x0 {
+        transform: scale(5.0);
     }
 }
 @media (min-width: 1200px) {
@@ -1414,6 +1703,78 @@ p.banner-layout {
     .mv-right-xl-9 {
         margin-right: -9rem;
     }
+    .scale-xl-0x1 {
+        transform: scale(0.1);
+    }
+    .scale-xl-0x2 {
+        transform: scale(0.2);
+    }
+    .scale-xl-0x25 {
+        transform: scale(0.25);
+    }
+    .scale-xl-0x3 {
+        transform: scale(0.3);
+    }
+    .scale-xl-0x4 {
+        transform: scale(0.4);
+    }
+    .scale-xl-0x5 {
+        transform: scale(0.5);
+    }
+    .scale-xl-0x6 {
+        transform: scale(0.6);
+    }
+    .scale-xl-0x7 {
+        transform: scale(0.7);
+    }
+    .scale-xl-0x75 {
+        transform: scale(0.75);
+    }
+    .scale-xl-0x8 {
+        transform: scale(0.8);
+    }
+    .scale-xl-0x9 {
+        transform: scale(0.9);
+    }
+    .scale-xl-1x0 {
+        transform: scale(1.2);
+    }
+    .scale-xl-1x1 {
+        transform: scale(1.1);
+    }
+    .scale-xl-1x2 {
+        transform: scale(1.2);
+    }
+    .scale-xl-1x25 {
+        transform: scale(1.25);
+    }
+    .scale-xl-1x3 {
+        transform: scale(1.3);
+    }
+    .scale-xl-1x4 {
+        transform: scale(1.4);
+    }
+    .scale-xl-1x5 {
+        transform: scale(1.5);
+    }
+    .scale-xl-1x75 {
+        transform: scale(1.75);
+    }
+    .scale-xl-2x0 {
+        transform: scale(2.0);
+    }
+    .scale-xl-2x5 {
+        transform: scale(2.5);
+    }
+    .scale-xl-3x0 {
+        transform: scale(3.0);
+    }
+    .scale-xl-4x0 {
+        transform: scale(4.0);
+    }
+    .scale-xl-5x0 {
+        transform: scale(5.0);
+    }
 }
 @media (min-width: 1400px) {
     .mv-up-xxl-0 {
@@ -1596,429 +1957,6 @@ p.banner-layout {
     .mv-right-xxl-9 {
         margin-right: -9rem;
     }
-}
-
-.btn-circle {
-    width: 3rem;
-    height: 3rem;
-    border-radius: 50%;
-    text-align: center;
-}
-
-.animate-on-hover {
-    cursor: pointer;
-}
-
-/* swiper */
-.character-img {
-    border-radius: 1rem;
-    height: 200px;
-}
-@media (min-width: 576px) {
-}
-@media (min-width: 768px) {
-}
-@media (min-width: 992px) {
-    .character-img {
-        border-radius: 2rem;
-        height: 250px;
-    }
-}
-@media (min-width: 1200px) {
-    .character-img {
-        border-radius: 3rem;
-        height: 300px;
-    }
-    .character > .swiper-wrapper{
-        margin-left: -5%;
-    }
-}
-@media (min-width: 1400px) {
-}
-.character-img:hover {
-    transform: scale(1.2);
-    transform-origin: center center;
-    transition-duration: 750ms;
-    z-index: 1;
-}
-
-.lighting-con {
-    box-shadow: 0 0 1rem 0.1rem rgba(255, 255, 255, 0.2);
-}
-
-.lighting-div {
-    box-shadow: 0 0 4rem 0.1rem rgba(255, 255, 255, 0.1);
-}
-
-.scale-0x1 {
-    transform: scale(0.1);
-}
-.scale-0x2 {
-    transform: scale(0.2);
-}
-.scale-0x25 {
-    transform: scale(0.25);
-}
-.scale-0x3 {
-    transform: scale(0.3);
-}
-.scale-0x4 {
-    transform: scale(0.4);
-}
-.scale-0x5 {
-    transform: scale(0.5);
-}
-.scale-0x6 {
-    transform: scale(0.6);
-}
-.scale-0x7 {
-    transform: scale(0.7);
-}
-.scale-0x75 {
-    transform: scale(0.75);
-}
-.scale-0x8 {
-    transform: scale(0.8);
-}
-.scale-0x9 {
-    transform: scale(0.9);
-}
-.scale-1x0 {
-    transform: scale(1.2);
-}
-.scale-1x1 {
-    transform: scale(1.1);
-}
-.scale-1x2 {
-    transform: scale(1.2);
-}
-.scale-1x25 {
-    transform: scale(1.25);
-}
-.scale-1x3 {
-    transform: scale(1.3);
-}
-.scale-1x4 {
-    transform: scale(1.4);
-}
-.scale-1x5 {
-    transform: scale(1.5);
-}
-.scale-1x75 {
-    transform: scale(1.75);
-}
-.scale-2x0 {
-    transform: scale(2.0);
-}
-.scale-2x5 {
-    transform: scale(2.5);
-}
-.scale-3x0 {
-    transform: scale(3.0);
-}
-.scale-4x0 {
-    transform: scale(4.0);
-}
-.scale-5x0 {
-    transform: scale(5.0);
-}
-@media (min-width: 576px) {
-    .scale-sm-0x1 {
-        transform: scale(0.1);
-    }
-    .scale-sm-0x2 {
-        transform: scale(0.2);
-    }
-    .scale-sm-0x25 {
-        transform: scale(0.25);
-    }
-    .scale-sm-0x3 {
-        transform: scale(0.3);
-    }
-    .scale-sm-0x4 {
-        transform: scale(0.4);
-    }
-    .scale-sm-0x5 {
-        transform: scale(0.5);
-    }
-    .scale-sm-0x6 {
-        transform: scale(0.6);
-    }
-    .scale-sm-0x7 {
-        transform: scale(0.7);
-    }
-    .scale-sm-0x75 {
-        transform: scale(0.75);
-    }
-    .scale-sm-0x8 {
-        transform: scale(0.8);
-    }
-    .scale-sm-0x9 {
-        transform: scale(0.9);
-    }
-    .scale-sm-1x0 {
-        transform: scale(1.2);
-    }
-    .scale-sm-1x1 {
-        transform: scale(1.1);
-    }
-    .scale-sm-1x2 {
-        transform: scale(1.2);
-    }
-    .scale-sm-1x25 {
-        transform: scale(1.25);
-    }
-    .scale-sm-1x3 {
-        transform: scale(1.3);
-    }
-    .scale-sm-1x4 {
-        transform: scale(1.4);
-    }
-    .scale-sm-1x5 {
-        transform: scale(1.5);
-    }
-    .scale-sm-1x75 {
-        transform: scale(1.75);
-    }
-    .scale-sm-2x0 {
-        transform: scale(2.0);
-    }
-    .scale-sm-2x5 {
-        transform: scale(2.5);
-    }
-    .scale-sm-3x0 {
-        transform: scale(3.0);
-    }
-    .scale-sm-4x0 {
-        transform: scale(4.0);
-    }
-    .scale-sm-5x0 {
-        transform: scale(5.0);
-    }
-}
-@media (min-width: 768px) {
-    .scale-md-0x1 {
-        transform: scale(0.1);
-    }
-    .scale-md-0x2 {
-        transform: scale(0.2);
-    }
-    .scale-md-0x25 {
-        transform: scale(0.25);
-    }
-    .scale-md-0x3 {
-        transform: scale(0.3);
-    }
-    .scale-md-0x4 {
-        transform: scale(0.4);
-    }
-    .scale-md-0x5 {
-        transform: scale(0.5);
-    }
-    .scale-md-0x6 {
-        transform: scale(0.6);
-    }
-    .scale-md-0x7 {
-        transform: scale(0.7);
-    }
-    .scale-md-0x75 {
-        transform: scale(0.75);
-    }
-    .scale-md-0x8 {
-        transform: scale(0.8);
-    }
-    .scale-md-0x9 {
-        transform: scale(0.9);
-    }
-    .scale-md-1x0 {
-        transform: scale(1.2);
-    }
-    .scale-md-1x1 {
-        transform: scale(1.1);
-    }
-    .scale-md-1x2 {
-        transform: scale(1.2);
-    }
-    .scale-md-1x25 {
-        transform: scale(1.25);
-    }
-    .scale-md-1x3 {
-        transform: scale(1.3);
-    }
-    .scale-md-1x4 {
-        transform: scale(1.4);
-    }
-    .scale-md-1x5 {
-        transform: scale(1.5);
-    }
-    .scale-md-1x75 {
-        transform: scale(1.75);
-    }
-    .scale-md-2x0 {
-        transform: scale(2.0);
-    }
-    .scale-md-2x5 {
-        transform: scale(2.5);
-    }
-    .scale-md-3x0 {
-        transform: scale(3.0);
-    }
-    .scale-md-4x0 {
-        transform: scale(4.0);
-    }
-    .scale-md-5x0 {
-        transform: scale(5.0);
-    }
-}
-@media (min-width: 992px) {
-    .scale-lg-0x1 {
-        transform: scale(0.1);
-    }
-    .scale-lg-0x2 {
-        transform: scale(0.2);
-    }
-    .scale-lg-0x25 {
-        transform: scale(0.25);
-    }
-    .scale-lg-0x3 {
-        transform: scale(0.3);
-    }
-    .scale-lg-0x4 {
-        transform: scale(0.4);
-    }
-    .scale-lg-0x5 {
-        transform: scale(0.5);
-    }
-    .scale-lg-0x6 {
-        transform: scale(0.6);
-    }
-    .scale-lg-0x7 {
-        transform: scale(0.7);
-    }
-    .scale-lg-0x75 {
-        transform: scale(0.75);
-    }
-    .scale-lg-0x8 {
-        transform: scale(0.8);
-    }
-    .scale-lg-0x9 {
-        transform: scale(0.9);
-    }
-    .scale-lg-1x0 {
-        transform: scale(1.2);
-    }
-    .scale-lg-1x1 {
-        transform: scale(1.1);
-    }
-    .scale-lg-1x2 {
-        transform: scale(1.2);
-    }
-    .scale-lg-1x25 {
-        transform: scale(1.25);
-    }
-    .scale-lg-1x3 {
-        transform: scale(1.3);
-    }
-    .scale-lg-1x4 {
-        transform: scale(1.4);
-    }
-    .scale-lg-1x5 {
-        transform: scale(1.5);
-    }
-    .scale-lg-1x75 {
-        transform: scale(1.75);
-    }
-    .scale-lg-2x0 {
-        transform: scale(2.0);
-    }
-    .scale-lg-2x5 {
-        transform: scale(2.5);
-    }
-    .scale-lg-3x0 {
-        transform: scale(3.0);
-    }
-    .scale-lg-4x0 {
-        transform: scale(4.0);
-    }
-    .scale-lg-5x0 {
-        transform: scale(5.0);
-    }
-}
-@media (min-width: 1200px) {
-    .scale-xl-0x1 {
-        transform: scale(0.1);
-    }
-    .scale-xl-0x2 {
-        transform: scale(0.2);
-    }
-    .scale-xl-0x25 {
-        transform: scale(0.25);
-    }
-    .scale-xl-0x3 {
-        transform: scale(0.3);
-    }
-    .scale-xl-0x4 {
-        transform: scale(0.4);
-    }
-    .scale-xl-0x5 {
-        transform: scale(0.5);
-    }
-    .scale-xl-0x6 {
-        transform: scale(0.6);
-    }
-    .scale-xl-0x7 {
-        transform: scale(0.7);
-    }
-    .scale-xl-0x75 {
-        transform: scale(0.75);
-    }
-    .scale-xl-0x8 {
-        transform: scale(0.8);
-    }
-    .scale-xl-0x9 {
-        transform: scale(0.9);
-    }
-    .scale-xl-1x0 {
-        transform: scale(1.2);
-    }
-    .scale-xl-1x1 {
-        transform: scale(1.1);
-    }
-    .scale-xl-1x2 {
-        transform: scale(1.2);
-    }
-    .scale-xl-1x25 {
-        transform: scale(1.25);
-    }
-    .scale-xl-1x3 {
-        transform: scale(1.3);
-    }
-    .scale-xl-1x4 {
-        transform: scale(1.4);
-    }
-    .scale-xl-1x5 {
-        transform: scale(1.5);
-    }
-    .scale-xl-1x75 {
-        transform: scale(1.75);
-    }
-    .scale-xl-2x0 {
-        transform: scale(2.0);
-    }
-    .scale-xl-2x5 {
-        transform: scale(2.5);
-    }
-    .scale-xl-3x0 {
-        transform: scale(3.0);
-    }
-    .scale-xl-4x0 {
-        transform: scale(4.0);
-    }
-    .scale-xl-5x0 {
-        transform: scale(5.0);
-    }
-}
-@media (min-width: 1400px) {
     .scale-xxl-0x1 {
         transform: scale(0.1);
     }
@@ -2093,12 +2031,57 @@ p.banner-layout {
     }
 }
 
-/* Bootstrap */
-.py-6 {
-    padding-top: 5rem !important;
-    padding-bottom: 5rem !important;
+.btn-circle {
+    width: 3rem;
+    height: 3rem;
+    border-radius: 50%;
+    text-align: center;
 }
 
+.animate-on-hover {
+    cursor: pointer;
+}
+
+/* swiper */
+.character-img {
+    border-radius: 1rem;
+    height: 200px;
+}
+@media (min-width: 576px) {
+}
+@media (min-width: 768px) {
+}
+@media (min-width: 992px) {
+    .character-img {
+        border-radius: 2rem;
+        height: 250px;
+    }
+}
+@media (min-width: 1200px) {
+    .character-img {
+        border-radius: 3rem;
+        height: 300px;
+    }
+    .character > .swiper-wrapper{
+        margin-left: -5%;
+    }
+}
+@media (min-width: 1400px) {
+}
+.character-img:hover {
+    transform: scale(1.2);
+    transform-origin: center center;
+    transition-duration: 750ms;
+    z-index: 1;
+}
+
+.lighting-con {
+    box-shadow: 0 0 1rem 0.1rem rgba(255, 255, 255, 0.2);
+}
+
+.lighting-div {
+    box-shadow: 0 0 4rem 0.1rem rgba(255, 255, 255, 0.1);
+}
 
 /* Fading animation */
 .fade {
