--- a/common.css
+++ b/common.css
@@ -2,6 +2,7 @@
 
 }
 
+/* variable */
 .v1-theme {
     /* version 1.0 */
     --preverse-height: 74px;
@@ -21,6 +22,8 @@
     --linear-accessory-c2: #333473;
     --linear-magic-c1: #412AC0;
     --linear-magic-c2: #22185B;
+    /* --linear-hover-c1 */
+    /* --linear-hover-c2 */
 
     --brand-rgb: 150, 139, 244;
     --base-rgb: 32, 30, 42;
@@ -38,6 +41,8 @@
     --linear-accessory-c2-rgb: 51, 52, 115;
     --linear-magic-c1-rgb: 65, 42, 192;
     --linear-magic-c2-rgb: 34, 24, 91;
+    /* --linear-hover-c1-rgb */
+    /* --linear-hover-c2-rgb */
 }
 
 .v2-theme {
@@ -59,6 +64,8 @@
     /*--linear-accessory-c2: #333473;*/
     /*--linear-magic-c1: #412AC0;*/
     /*--linear-magic-c2: #22185B;*/
+    --linear-hover-c1: #7A60DB;
+    --linear-hover-c2: #5E78DB;
 
     --brand-rgb: 103, 247, 187;
     --base-rgb: 141, 149, 250;
@@ -76,10 +83,17 @@
     /*--linear-accessory-c2-rgb: 51, 52, 115;*/
     /*--linear-magic-c1-rgb: 65, 42, 192;*/
     /*--linear-magic-c2-rgb: 34, 24, 91;*/
+    --linear-hover-c1-rgb: 122, 96, 219;
+    --linear-hover-c2-rgb: 94, 120, 219;
 
     /* override bootstrap */
     --bs-light: #FCFCFC;
     --bs-light-rgb: 252, 252, 252;
+}
+
+/* extend bootstrap */
+img {
+    width: auto !important;
 }
 
 .bg-brand {
@@ -191,6 +205,14 @@
 
 .text-foot {
     color: rgba(var(--foot-rgb), 1) !important;
+}
+
+.border-trans {
+    border-color: transparent !important;
+}
+
+.border-brand{
+    border-color: rgba(var(--brand-rgb), 1) !important;
 }
 
 .bg-full {
@@ -2031,6 +2053,12 @@ p.banner-layout {
     }
 }
 
+.btn-xxl, .btn-group-lg > .btn {
+    padding: 1rem 3.5rem;
+    font-size: 2rem;
+    border-radius: 1.8rem;
+}
+
 .btn-circle {
     width: 3rem;
     height: 3rem;
@@ -2038,8 +2066,32 @@ p.banner-layout {
     text-align: center;
 }
 
+.progress {
+    border-radius: 0.35rem;
+}
+
 .animate-on-hover {
     cursor: pointer;
+}
+
+.hover-linear-color:hover {
+    animation: linearBackground 0.6s ease-in-out;
+    animation-fill-mode: forwards;
+}
+
+@keyframes linearBackground {
+    0% {
+        background-image: linear-gradient(0deg, var(--linear-hover-c1), var(--linear-hover-c2)); !important;
+    }
+    33% {
+        background-image: linear-gradient(90deg, var(--linear-hover-c1), var(--linear-hover-c2)); !important;
+    }
+    66% {
+        background-image: linear-gradient(180deg, var(--linear-hover-c1), var(--linear-hover-c2)); !important;
+    }
+    100% {
+        background-image: linear-gradient(270deg, var(--linear-hover-c1), var(--linear-hover-c2)); !important;
+    }
 }
 
 /* swiper */
