--- a/common.css
+++ b/common.css
@@ -245,7 +245,7 @@ img {
 .radius-5 {
     border-radius: 5rem;
 }
-.radius-40pct {
+.radius-0x40 {
     border-radius: 40%;
 }
 @media (min-width: 576px) {
@@ -411,7 +411,7 @@ p.banner-layout {
 }
 .banner-text-h4 {
     font-size: 1rem;
-    line-height: 2.4rem;
+    line-height: 1.5rem;
 }
 .banner-text-h5 {
     font-size: 1rem;
