dress page update

--- a/common.css
+++ b/common.css
@@ -60,8 +60,8 @@
     /*--variant: #4550A6;*/
     --linear-brand-c1: #9B84F1;
     --linear-brand-c2: #88A0FC;
-    /*--linear-accessory-c1: #585BFF;*/
-    /*--linear-accessory-c2: #333473;*/
+    --linear-accessory-c1: #838AEA;
+    --linear-accessory-c2: #838AEA;
     /*--linear-magic-c1: #412AC0;*/
     /*--linear-magic-c2: #22185B;*/
     --linear-hover-c1: #7A60DB;
